# GameEngine

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sandbox.cbp
resources/shaders/: SkeletalMesh.fs.glsl  SkeletalMesh.vs.glsl  StaticMesh.fs.glsl  StaticMesh.vs.glsl
src/engine/: CMakeLists.txt  Core.h  EnginePCH.h  Makefile
src/engine/Component/Camera/: CameraComponent.cpp  CameraComponent.h  FreeCameraComponent.cpp  FreeCameraComponent.h
src/engine/Component/Mesh/: MeshComponent.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
src/engine/Context/: Window.cpp  Window.h
src/engine/Graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/engine/Graphics/Animation/: Animator.cpp  Animator.h  Clip.cpp  Clip.h  Joint.cpp  Joint.h  KeyFrame.cpp  KeyFrame.h
src/engine/Graphics/Buffer/: ElementBuffer.cpp  ElementBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/engine/Graphics/Mesh/: MeshData.h  MeshImporter.cpp  MeshImporter.h  SkeletalMeshImporter.cpp  SkeletalMeshImporter.h  StaticMeshImporter.cpp  StaticMeshImporter.h
src/engine/Primitives/: Component.cpp  Component.h  Drawable.h  GameObject.h  Transform.h
src/engine/Scene/: Scene.cpp  Scene.h
src/engine/Util/: Input.h  Math.h  Util.h  Vfs.h
src/sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
